# routes/routes.go
@@ -10,8 +10,8 @@ func SetupRouter() *mux.Router {
 	r := mux.NewRouter()
 
 	// Define your routes here
-	r.HandleFunc("/posts", handlers.GetPosts).Methods("GET")
-	r.HandleFunc("/post", handlers.CreatePost).Methods("POST")
+	r.HandleFunc("/posts/", handlers.GetPosts).Methods("GET")
+	r.HandleFunc("/post/", handlers.CreatePost).Methods("POST")
 	r.HandleFunc("/post/{id}", handlers.GetPostByID).Methods("GET")
 	//r.HandleFunc("/posts/{id}", handlers.UpdatePost).Methods("PUT")
 	//r.HandleFunc("/posts/{id}", handlers.DeletePost).Methods("DELETE")
